--- a/styles/quest-general.scss
+++ b/styles/quest-general.scss
@@ -29,7 +29,6 @@
 
   h2 {
     font-size: 18px;
-    line-height: 1;
     font-weight: 700;
     padding: 0 0 2px 0;
     margin: 0 0 4px 0;
